--- a/example/avatar/client/scenes/index.html
+++ b/example/avatar/client/scenes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf8" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>EPII Avatar</title>
+    <title>epii avatar</title>
     <link rel="icon" type="image/png" href="../assets/epii-icon.png" />
   </head>
   <body>
