--- a/example/avatar/client/scenes/index.html
+++ b/example/avatar/client/scenes/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf8" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <title>epii avatar</title>
-    <link rel="icon" type="image/png" href="../assets/epii-icon.png" />
+    <link rel="icon" type="image/png" href="../assets/epii.png" />
   </head>
   <body>
     <div id="app"></div>
